<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.postace.myruns1.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_user_photo_title" />

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_photo"
                android:contentDescription="@string/ui_user_photo_description"
                android:src="@drawable/sample"
                android:layout_width="0dp"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_height="100dp"/>

            <Button
                android:onClick="onSnapClicked"
                android:id="@+id/btn_snap"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/ui_button_snap"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_margin="5dp"
            android:text="@string/ui_user_name_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/text_name"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/ui_user_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="5dp"
            android:text="@string/ui_user_email_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/text_email"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/ui_user_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="5dp"
            android:text="@string/ui_user_phone_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/text_phone_number"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/ui_user_phone_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="5dp"
            android:text="@string/ui_user_gender_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_gender_M"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_user_gender_male"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radio_gender_F"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_user_gender_female"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:layout_margin="5dp"
            android:text="@string/ui_user_class_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/text_class"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/ui_user_class_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_margin="5dp"
            android:text="@string/ui_user_major_title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/text_major"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/ui_user_major_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="5dp"
                android:id="@+id/btn_save"
                android:text="@string/ui_button_save"
                android:onClick="onSaveClicked"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Button
                android:onClick="onCancelClicked"
                android:layout_margin="5dp"
                android:id="@+id/btn_cancel"
                android:layout_weight="1"
                android:text="@string/ui_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
